@@ -12,10 +12,13 @@ import java.util.Scanner;
 
 public class Cli {
 
-    private static Scanner scanner = new Scanner((System.in));
-    private static WaterTrackerService waterTrackerService = new WaterTrackerService();
-    private static DateTimeFormatter formatter = DateTimeFormatter.ofPattern("dd-MM-yyyy HH:mm");
+    private static final Scanner scanner = new Scanner((System.in));
+    private static WaterTrackerService waterTrackerService;
+    private static final DateTimeFormatter formatter = DateTimeFormatter.ofPattern("dd-MM-yyyy HH:mm");
 
+    public Cli (WaterTrackerService service) {
+        waterTrackerService = service;
+    }
 
     /**
      * Main method to start the CLI application.
@@ -25,41 +28,90 @@ public class Cli {
     public static void start() {
         System.out.println("Welcome to the Water Tracker!");
 
-        // set daily goal
-        System.out.println("Please enter your daily water intake goal (in ml): ");
-        int dailyGoal = Integer.parseInt(scanner.nextLine());
-        waterTrackerService.setDailyGoal(dailyGoal);
-
-        System.out.println("Your daily goal is set to " + dailyGoal + " ml.");
+        setDailyGoal();
 
 
 
         // Entering water intake
         while (true) {
-            System.out.println("Enter amount (ml), 'history', 'stats', 'clear', or 'exit': ");
-            String input = scanner.nextLine();
+            printMenu();
 
-            // Exit condition
-            if (input.equalsIgnoreCase("exit"))
-                break;
-
-            switch (input.toLowerCase()) {
-                case "history" -> showHistory();
-                case "stats" -> showStat();
-                case "clear" -> clearHistory();
-                default -> handleWaterIntake(input);
-            }
+            String input = scanner.nextLine().trim();
+           switch (input) {
+               case "1":
+                   handleWaterIntake();
+                        break;
+               case "2":
+                   showTodaySummary();
+                        break;
+               case "3":
+                   showMonthlySummary();
+                        break;
+               case "4":
+                   showHistory();
+                        break;
+               case "5":
+                     exportDataToCSV();
+                        break;
+               case "6":
+                   showStat();
+                        break;
+               case "7":
+                   clearHistory();
+                        break;
+               case "0":
+                     System.out.println("Exiting...");
+                     return;
+                default:
+                    System.out.println("⚠️ Invalid choice. Try again!");
+           }
         }
 
-
-        System.out.println("Thank you for using the Water Tracker!");
     }
 
-    private static void handleWaterIntake(String input) {
+
+    // Set daily goal
+    private static void setDailyGoal() {
+        if (waterTrackerService.getDailyGoal() == 0) {
+            System.out.println("Enter your daily water intake goal (ml): ");
+            try {
+                int goal = Integer.parseInt(scanner.nextLine().trim());
+                waterTrackerService.setDailyGoal(goal);
+                System.out.println("✅ Daily goal set to " + goal + " ml.");
+            } catch (NumberFormatException e) {
+                System.out.println("⚠️ Invalid input, using default goal (2000 ml).");
+            }
+        }
+    }
+
+
+    // Print menu
+    private static void printMenu() {
+        System.out.println("\n========= MENU =========");
+        System.out.println("1. Log Water Intake");
+        System.out.println("2. Show Today's Total Intake");
+        System.out.println("3. Show This Month's Total Intake");
+        System.out.println("4. Show Water Intake History");
+        System.out.println("5. Export Data to CSV");
+        System.out.println("6. Show Progress Toward Goal");
+        System.out.println("7. Clear History");
+        System.out.println("0. Exit");
+        System.out.print("Choose an option: ");
+    }
+
+
+    private static void handleWaterIntake() {
 
         // Handle water intake entry
         try {
-            int amount = Integer.parseInt(input);
+            int amount = Integer.parseInt(scanner.nextLine());
+
+            if (amount <= 0) {
+                System.out.println("❌ Invalid amount. Please enter a positive number.");
+                return;
+            }
+
+
             // Call the service to add the entry
             WaterEntry newEntry = new WaterEntry(amount, LocalDateTime.now());
             waterTrackerService.addEntry(newEntry);
@@ -74,10 +126,14 @@ public class Cli {
             System.out.printf("💧 Total today: %d ml (%.1f%% of goal)\n", totalIntake, progress);
             drawProgressBar(progress);
 
+
+
             if (waterTrackerService.isGoalMet()) {
                 System.out.println("🎉 Congratulations! You've met your daily goal of " +
                         waterTrackerService.getDailyGoal() + " ml!");
             }
+
+
         }
 
         catch (NumberFormatException e) {
@@ -85,9 +141,25 @@ public class Cli {
         }
     }
 
+    private static void showTodaySummary() {
+        int totalIntakeToday = waterTrackerService.getTotalWaterIntake();
+        System.out.println("💧 Total water intake today: " + totalIntakeToday + " ml");
+    }
+
+    private static void showMonthlySummary() {
+        int totalMonth = waterTrackerService.getTotalWaterIntakeThisMonth();
+        System.out.println("📅 Total water intake this month: " + totalMonth + " ml");
+    }
+
     public static void clearHistory() {
         waterTrackerService.clearHistory();
+        waterTrackerService.setDailyGoal(0);
         System.out.println("✅ History cleared.");
+
+        System.out.println("🚰 Please set a new daily water intake goal (in ml):");
+        int goal = Integer.parseInt(scanner.nextLine());
+        waterTrackerService.setDailyGoal(goal);
+        System.out.println("🎯 New Goal set: " + goal + " ml per day!");
     }
 
     private static void showHistory() {
@@ -96,6 +168,7 @@ public class Cli {
         if (entries.isEmpty()) {
             System.out.println("No entries found.");
             return;
+
         } else {
             System.out.println("📜 Water Intake History:");
             DateTimeFormatter formatter = DateTimeFormatter.ofPattern("dd-MM-yyyy HH:mm");
@@ -111,6 +184,7 @@ public class Cli {
         List<WaterEntry> entries = waterTrackerService.getHistory();
         if (entries.isEmpty()) {
             System.out.println("No entries found.");
+            return;
         } else {
             System.out.println("📜 Water Intake History:");
             for (WaterEntry entry : entries) {
@@ -120,12 +194,13 @@ public class Cli {
 
         int total = waterTrackerService.getTotalWaterIntake();
         double average = total / (double) entries.size();
-        WaterEntry lastEntry = entries.get(entries.size() - 1);
+        WaterEntry lastEntry = entries.getLast();
 
         DateTimeFormatter formatter = DateTimeFormatter.ofPattern("dd-MM-yyyy HH:mm");
         String lastTime = lastEntry.timestamp().format(formatter);
 
-        System.out.println("📊 Stats:");
+        System.out.println("📊 Stats:" );
+        drawProgressBar(waterTrackerService.getProgress()); // Progress bar
         System.out.println("🧃 Total Entries: " + entries.size());
         System.out.printf("🧮 Average Intake: %.1f ml\n", average);
         System.out.println("⏰ Last Entry: " + lastTime);
@@ -141,5 +216,10 @@ public class Cli {
         System.out.println(bar + " " + (int) percent + "%\n");
     }
 
+    private static void exportDataToCSV() {
+        System.out.print("Enter filename to export (example: water_log.csv): ");
+        String filename = scanner.nextLine();
+        waterTrackerService.exportToCsv(filename);
+    }
 
 }
